[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/MultiTrigger.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Trigger.tscn" type="PackedScene" id=2]

[node name="MultiTrigger" type="Spatial"]
script = ExtResource( 1 )
all_hit_color = Color( 0.113725, 0.627451, 0.109804, 1 )

[node name="Trigger" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1 )
money_value = 0

[node name="Trigger2" parent="." instance=ExtResource( 2 )]
money_value = 0

[node name="Trigger3" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1 )
money_value = 0

[node name="ResetTimer" type="Timer" parent="."]
wait_time = 3.0
[connection signal="all_hit" from="." to="Trigger3" method="_on_MultiTrigger_all_hit"]
[connection signal="all_hit" from="." to="Trigger" method="_on_MultiTrigger_all_hit"]
[connection signal="all_hit" from="." to="Trigger2" method="_on_MultiTrigger_all_hit"]
[connection signal="all_reset" from="." to="Trigger3" method="_on_MultiTrigger_all_reset"]
[connection signal="all_reset" from="." to="Trigger" method="_on_MultiTrigger_all_reset"]
[connection signal="all_reset" from="." to="Trigger2" method="_on_MultiTrigger_all_reset"]
[connection signal="hit" from="Trigger" to="." method="_on_ChildTrigger_hit"]
[connection signal="reset" from="Trigger" to="." method="_on_ChildTrigger_reset"]
[connection signal="hit" from="Trigger2" to="." method="_on_ChildTrigger_hit"]
[connection signal="reset" from="Trigger2" to="." method="_on_ChildTrigger_reset"]
[connection signal="hit" from="Trigger3" to="." method="_on_ChildTrigger_hit"]
[connection signal="reset" from="Trigger3" to="." method="_on_ChildTrigger_reset"]
[connection signal="timeout" from="ResetTimer" to="." method="_on_ResetTimer_timeout"]
